--- a/day_01/Cargo.toml
+++ b/day_01/Cargo.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+divan = "0.1.21"
 eyre = "0.6.12"
+
+[[bench]]
+name = "bench"
+harness = false
